# transact

./: Cargo.toml
examples/address_generator/: Cargo.toml
examples/address_generator/src/: main.rs
examples/contract_hello_world/: Cargo.toml
examples/simple_key_xo/src/: main.rs
examples/simple_xo/: Cargo.toml
examples/simple_xo/src/: main-old.rs  main.rs
examples/simple_xo/src/handler/: game.rs  mod.rs
libtransact/: Cargo.toml
libtransact/src/: sawtooth.rs
libtransact/src/contract/: handler.rs  mod.rs
libtransact/src/contract/address/: double_key_hash.rs  error.rs  key_hash.rs  mod.rs  triple_key_hash.rs
libtransact/src/contract/archive/: mod.rs
libtransact/src/contract/context/: handler.rs  key_value.rs  mod.rs
libtransact/src/contract/engine/: handler.rs  mod.rs
libtransact/src/handler/: mod.rs  smart_contract.rs
