[package]
name = "simple-xo"
version = "0.1.0"
authors = ["IBM Corp.", "Cargill Incorporated"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sawtooth-xo = "0.3"
hex = "0.3"
sha2 = "0.8"

[dependencies.transact]
path = "../../libtransact"
features = [
    "contract-address-double-key-hash",
    "contract-address-key-hash",
    "contract-address-triple-key-hash",
    "contract-context",
    "contract-handler",
]
